# backend

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/actions/: build.yaml  deploy.yaml
.github/actions/deploy/: action.yaml
.github/actions/package/: action.yaml
.github/workflows/: beta.yaml  build.yaml  pr.yaml  release.yaml
common/: Cargo.toml
common/src/: constants.rs  deserialize_disallow_empty_string.rs  image_cache.rs  lib.rs  messages.rs  price_history.rs  search_params.rs  utils.rs
common/src/firearms/: constants.rs  firearm.rs
common/src/result/: base.rs  enums.rs  metadata.rs  mod.rs
crawler/: Cargo.toml
crawler/src/: errors.rs  lib.rs  protected.rs  request.rs  traits.rs  unprotected.rs
crawler/src/results/: constants.rs  firearm.rs  mod.rs
discord/: Cargo.toml
discord/src/: client.rs  contact.rs  indexer.rs  lib.rs
entrypoint/: Cargo.toml
entrypoint/src/: main.rs
entrypoint/src/api/: main.rs  service_layers.rs  structs.rs
entrypoint/src/api/routes/: contact.rs  error_message_erasure.rs  history.rs  image.rs  mod.rs  search_query.rs
entrypoint/src/indexer/: main.rs  retailer_helpers.rs  retailers.rs
entrypoint/src/indexer/clients/: base.rs  graphql_client.rs  mod.rs  pagination_client.rs  utils.rs
entrypoint/src/utils/: discord.rs  lib.rs  logger.rs
entrypoint/src/utils/discord/: contact.rs  indexer.rs  mod.rs
image_cache/: Cargo.toml
image_cache/src/: cache.rs  lib.rs  memory_cache.rs  traits.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
mongodb_connector/: Cargo.toml
mongodb_connector/src/: connector.rs  constants.rs  errors.rs  lib.rs  structs.rs
mongodb_connector/src/collections/: crawl_results.rs  live_results.rs  messages.rs  mod.rs  price_history.rs
mongodb_connector/src/history_pipeline/: traits.rs
mongodb_connector/src/query_pipeline/: dedupe_stage.rs  match_stage.rs  mod.rs  page_stage.rs  sort_stage.rs  traits.rs
mongodb_connector/src/stages/: dedupe_stage.rs  match_stage.rs  mod.rs  page_stage.rs  sort_stage.rs  traits.rs
retailers/: Cargo.toml
retailers/src/: errors.rs  italian_sporting_goods.rs  lib.rs  pagination_client.rs  reliable_gun.rs  structures.rs  traits.rs  utils.rs
retailers/src/results/: constants.rs  firearm.rs
retailers/src/retailers/: _template.rs  al_flahertys.rs  bullseye_north.rs  calgary_shooting_centre.rs  canadas_gun_shop.rs  canadas_gun_store.rs  dante_sports.rs  dominion_outdoors.rs  firearms_outlet_canada.rs  firearmsoutletcanada.rs  g4c_gun_store.rs  italian_sporting_goods.rs  lever_arms.rs  mod.rs  rangeview_sports.rs  rdsc.rs  reliable_gun.rs  select_shooting_supplies.rs  tenda.rs  the_ammo_source.rs  theammosource.rs  tillsonburg_gun_shop.rs  true_north_arms.rs
retailers/src/retailers/gql/: mod.rs
retailers/src/retailers/gql/prophet_river/: api_request.rs  api_response_objects.rs  mod.rs  prophet_river.rs
retailers/src/retailers/html/: _template.rs  al_flahertys.rs  al_simmons.rs  bartons_big_country.rs  bullseye_north.rs  calgary_shooting_centre.rs  canadas_gun_store.rs  clinton_sporting_goods.rs  dante_sports.rs  dominion_outdoors.rs  firearms_outlet_canada.rs  g4c_gun_store.rs  great_north_gun.rs  international_shooting_supplies.rs  intersurplus.rs  italian_sporting_goods.rs  lever_arms.rs  magdump.rs  marstar.rs  mod.rs  rangeview_sports.rs  rdsc.rs  reliable_gun.rs  select_shooting_supplies.rs  sj_hardware.rs  soley_outdoors.rs  tenda.rs  the_ammo_source.rs  tillsonburg_gun_shop.rs  true_north_arms.rs  victory_ridge_sports.rs
retailers/src/utils/: auctollo_sitemap.rs  conversions.rs  generic_sitemap.rs  html.rs  json.rs  mod.rs  regex.rs
retailers/src/utils/ecommerce/: bigcommerce.rs  bigcommerce_nested.rs  mod.rs  woocommerce.rs  woocommerce_nested.rs
retailers/src/utils/ecommerce/bigcommerce/: mod.rs  nested.rs  normal.rs  sitemap.rs  structs.rs
retailers/src/utils/ecommerce/woocommerce/: mod.rs  nested.rs  normal.rs  structs.rs
