[workspace]
resolver = "2"
members = [
	"crawler",
	"entrypoint",
	"retailers",
	"mongodb_connector",
	"common"
]

[workspace.dependencies]
crawler = { path = "./crawler" }
retailers = { path = "./retailers" }
mongodb_connector = { path = "./mongodb_connector" }
common = { path = "./common" }

reqwest = "0.12.15"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = "1.44.2"
scraper = "0.23.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.88"
mongodb = "3.2.3"
axum = "0.8.4"
axum-extra = "0.10.1"
tower-http = "0.6.4"
tower = "0.5.2"
regex = "1.11.1"
thiserror = "2.0.12"
serenity = "0.12.4"
urlencoding = "2.1.3"
strum = "0.27.1"
strum_macros = "0.27.1"
base64 = "0.22.1"
futures = "0.3.31"
