[workspace]
resolver = "3"
members = [
	"crawler",
	"entrypoint",
	"retailers",
	"mongodb_connector",
	"common",
	"metrics"
]

[profile.release]
strip = true
opt-level = "s"
lto = true

[workspace.dependencies]
crawler = { path = "./crawler" }
retailers = { path = "./retailers" }
mongodb_connector = { path = "./mongodb_connector" }
common = { path = "./common" }
metrics = { path = "./metrics" }
discord = { path = "./discord" }
image_cache = { path = "./image_cache" }

reqwest = "0.12.24"
reqwest-retry = "0.8.0"
reqwest-middleware = "0.4.2"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.1"
tokio = "1.48.0"
scraper = "0.24.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
async-trait = "0.1.88"
mongodb = "3.4.1"
axum = "0.8.7"
axum-extra = "0.12.2"
tower-http = "0.6.7"
tower = "0.5.2"
regex = "1.12.2"
thiserror = "2.0.17"
serenity = { version = "0.12.4", features = ["model"] }
urlencoding = "2.1.3"
strum = "0.27.1"
strum_macros = "0.27.1"
base64 = "0.22.1"
futures = "0.3.31"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5.53", features = ["derive"] }
mimalloc = "0.1.47"
chrono = "0.4.42"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
