[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
name = "common"
path = "./src/lib.rs"
doctest = false
test = false
doc = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
strum = "0.27.1"
strum_macros = "0.27.1"
