[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[lib]
name = "crawler"
path = "./src/lib.rs"
doctest = false
test = false
doc = false

[dependencies]
#headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
reqwest = { workspace = true, features = ["json", "gzip", "http2"] }
reqwest-retry.workspace = true
reqwest-middleware = { workspace = true, features = ["json"] }
#serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
thiserror.workspace = true
