[package]
name = "entrypoint"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "indexer"
path = "./src/indexer/main.rs"
doctest = false
test = false
doc = false

[[bin]]
name = "api"
path = "./src/api/main.rs"
doctest = false
test = false
doc = false

[lib]
name = "utils"
path = "./src/utils/lib.rs"
doctest = false
test = false
doc = false

[dependencies]
retailers.workspace = true
crawler.workspace = true
mongodb_connector.workspace = true
common.workspace = true

tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { workspace = true, features = ["query", "tokio", "macros"] }
axum-extra.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tower.workspace = true
serenity.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "gzip", "http2"] }
regex.workspace = true
clap.workspace = true
mimalloc.workspace = true
async-trait.workspace = true
