[package]
name = "metrics"
version = "0.1.0"
edition = "2024"

[lib]
name = "metrics"
path = "./src/lib.rs"
doctest = false
test = false
doc = false

[dependencies]
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true
