[package]
name = "retailers"
version = "0.1.0"
edition = "2024"

[lib]
name = "retailers"
path = "./src/lib.rs"
doctest = false
test = false
doc = false

[dependencies]
crawler.workspace = true
common.workspace = true

tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
serde.workspace = true
scraper.workspace = true
tracing.workspace = true
async-trait.workspace = true
regex.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
base64.workspace = true
futures = { workspace = true, features = ["executor"] }